Fix color contrast a11y for radio button controls
MS Accessibility insights reports an accessibility error for radio buttons with text. Changed color for active selection to white (#fff) instead of #222.

--- a/web/cobrands/fixamingata/base.scss
+++ b/web/cobrands/fixamingata/base.scss
@@ -37,3 +37,7 @@
     margin: 1em 0 0.5em;
   }
 }
+
+segmented-control--radio input:checked+label {
+  color: #fff !important;
+}
